[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/interface.gd" type="Script" id=1]
[ext_resource path="res://ui/bars/life_bar/LifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/bars/energy_bar/EnergyBar.tscn" type="PackedScene" id=3]

[node name="Interface" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 154.0
margin_right = 49.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Bars" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="LifeBar" parent="Bars" index="0" instance=ExtResource( 2 )]

[node name="EnergyBar" parent="Bars" index="1" instance=ExtResource( 3 )]

margin_left = 0.0
margin_top = 57.0
margin_right = 440.0
margin_bottom = 110.0

[connection signal="energy_updated" from="." to="Bars/EnergyBar" method="_on_Interface_energy_updated"]

[connection signal="life_updated" from="." to="Bars/LifeBar" method="_on_Interface_life_updated"]


